crates/providers/ferrin-openai/tests/suite/snapshots/all__suite__responses_recorded__recorded-proxy_stream_events.snap
---
source: crates/providers/ferrin-openai/tests/suite/responses_recorded.rs
expression: without_raw_usage(parts)
---
[
  {
    "type": "stream-start",
    "warnings": []
  },
  {
    "type": "response-metadata",
    "id": "[id]",
    "timestamp": "[timestamp]",
    "model_id": "gpt-5.6-sol"
  },
  {
    "type": "text-start",
    "id": "[id]",
    "provider_metadata": {
      "openai": {
        "itemId": "[item-id]",
        "phase": "final_answer"
      }
    }
  },
  {
    "type": "text-delta",
    "id": "[id]",
    "delta": "pong"
  },
  {
    "type": "text-end",
    "id": "[id]",
    "provider_metadata": {
      "openai": {
        "itemId": "[item-id]",
        "phase": "final_answer"
      }
    }
  },
  {
    "type": "finish",
    "finish_reason": {
      "unified": "stop"
    },
    "usage": {
      "input": {
        "total": 4393,
        "no_cache": 169,
        "cache_read": 4224,
        "cache_write": 0
      },
      "output": {
        "total": 5,
        "text": 5,
        "reasoning": 0
      }
    },
    "provider_metadata": {
      "openai": {
        "responseId": "[response-id]",
        "serviceTier": "default",
        "reasoningContext": "all_turns"
      }
    }
  }
]
