crates/providers/ferrin-openai/tests/suite/snapshots/all__suite__responses_recorded__recorded-proxy_structured-output.snap
---
source: crates/providers/ferrin-openai/tests/suite/responses_recorded.rs
expression: "json!({\n    \"text\":\n    result.content.iter().filter_map(Content::as_text).collect::<String>(),\n    \"calls\": calls, \"finish_reason\": result.finish_reason, \"usage\": usage,\n    \"warnings\": result.warnings,\n})"
---
{
  "text": "{\"city\":\"Paris\",\"country\":\"France\"}",
  "calls": [],
  "finish_reason": {
    "unified": "stop"
  },
  "usage": {
    "input": {
      "total": 4426,
      "no_cache": 4426,
      "cache_read": 0,
      "cache_write": 0
    },
    "output": {
      "total": 16,
      "text": 16,
      "reasoning": 0
    }
  },
  "warnings": []
}
