crates/providers/ferrin-openai/tests/suite/snapshots/all__suite__responses_recorded__recorded-proxy_tool-call.snap
---
source: crates/providers/ferrin-openai/tests/suite/responses_recorded.rs
expression: "json!({\n    \"text\":\n    result.content.iter().filter_map(Content::as_text).collect::<String>(),\n    \"calls\": calls, \"finish_reason\": result.finish_reason, \"usage\": usage,\n    \"warnings\": result.warnings,\n})"
---
{
  "text": "",
  "calls": [
    {
      "name": "get_weather",
      "input": {
        "city": "Berlin"
      },
      "provider_executed": false
    }
  ],
  "finish_reason": {
    "unified": "tool-calls"
  },
  "usage": {
    "input": {
      "total": 4432,
      "no_cache": 4432,
      "cache_read": 0,
      "cache_write": 0
    },
    "output": {
      "total": 18,
      "text": 18,
      "reasoning": 0
    }
  },
  "warnings": []
}
